# Text-Analysis-of-Quran

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 01_eda.ipynb
scripts/: _build_notebook.py  build_translation_dataset.py  fetch_chapters.py
src/quran_analysis/: __init__.py  config.py  eda.py  text.py  themes.py
